--- a/index.html
+++ b/index.html
@@ -573,11 +573,11 @@
       <!-- Blog Card 1 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="/blog/posts/build-portfolio.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/blog-portfolio.jpg');">
+          <a href="/blog/posts/build-portfolio.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/infosys mysore.jpg');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="/blog/posts/build-portfolio.html" target="_blank">How I Built My Portfolio</a></h3>
-            <p>Step-by-step guide on creating a personal portfolio website using React and GitHub Pages.</p>
+            <h3 class="heading"><a href="https://www.saurabhjha.site/Infosys_joining_onboarding_exp" target="_blank">My Infosys Onboarding Experience</a></h3>
+            <p>Step-by-step all events and required documents are writen in this article please looks ones</p>
           </div>
         </div>
       </div>
