--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
       <!-- Blog Card 1 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="/blog/posts/build-portfolio.html" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/infosys mysore.jpg');">
+          <a href="https://www.saurabhjha.site/Infosys_joining_onboarding_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/infosys mysore.jpg');">
           </a>
           <div class="text mt-3 float-right d-block">
             <h3 class="heading"><a href="https://www.saurabhjha.site/Infosys_joining_onboarding_exp" target="_blank">My Infosys Onboarding Experience</a></h3>
