--- a/Infosys_joining_onboarding_exp/index.html
+++ b/Infosys_joining_onboarding_exp/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Infosys Specialist Programmer Joining Experience" />
   <meta property="og:description" content="My Infosys SP onboarding journey, covering all important informations and tips." />
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://saurabhjha.site/sp_onboarding_exp" />
+  <meta property="og:url" content="https://saurabhjha.live/sp_onboarding_exp" />
     <link rel="icon" type="image/png" href=" images/logo.png" />
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
