--- a/index.html
+++ b/index.html
@@ -573,10 +573,10 @@
       <!-- Blog Card 1 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="https://www.saurabhjha.site/Infosys_joining_onboarding_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/infosys mysore.jpg');">
+          <a href="/Infosys_joining_onboarding_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/infosys mysore.jpg');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="https://www.saurabhjha.site/Infosys_joining_onboarding_exp" target="_blank">My Infosys Onboarding Experience</a></h3>
+            <h3 class="heading"><a href="/Infosys_joining_onboarding_exp" target="_blank">My Infosys Onboarding Experience</a></h3>
             <p>Step-by-step all events and required documents are writen in this article please looks ones</p>
           </div>
         </div>
