--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 		  <li class="nav-item"><a href="#blogs-section" class="nav-link"><span>Blogs</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 			<li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
+			<li class="nav-item"><a href="#" class="nav-link" id="loginBtn">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
