--- a/index.html
+++ b/index.html
@@ -502,38 +502,43 @@
     		</div>
 
 		
-							<div class="col-md-12 mb-5">
-					  <div class="resume-wrap ftco-animate">
-					    <span class="date">24th May 2025</span>
-					    <h2>PDF Document</h2>
-					    <span class="position">Shared on Website</span>
-					    <p class="mt-4">
-					      I recently uploaded this PDF document. You can view it directly below or download it using the button provided.
-					    </p>
-					    
-					    <!-- PDF Viewer -->
-					    <div style="text-align: center; margin-top: 20px;">
-					      <iframe 
-					        src="saurabhjha.pdf" 
-					        height="500" 
-					        width="100%" 
-					        frameborder="0" 
-					        title="Embedded PDF"
-					        style="max-width: 100%;">
-					      </iframe>
-					    </div>
 					
-					    <!-- Download Button -->
-					    <div style="text-align: center; margin-top: 15px;">
-					      <a href="saurabhjha.pdf" download class="btn btn-primary">Download PDF</a>
-					    </div>
-					  </div>
-					</div>
-
-
-		
     	</div>
     </section>
+
+
+	  <section class="ftco-section ftc-no-pb" id="cv-section" style="display:none;">
+		<div class="container">
+			<div class="col-md-12 mb-5">
+		<div class="resume-wrap ftco-animate">
+			<span class="date">24th May 2025</span>
+			<h2>PDF Document</h2>
+			<span class="position">Shared on Website</span>
+			<p class="mt-4">
+			I recently uploaded this PDF document. You can view it directly below or download it using the button provided.
+			</p>
+			
+			<!-- PDF Viewer -->
+			<div style="text-align: center; margin-top: 20px;">
+			<iframe 
+				src="saurabhjha.pdf" 
+				height="500" 
+				width="100%" 
+				frameborder="0" 
+				title="Embedded PDF"
+				style="max-width: 100%;">
+			</iframe>
+			</div>
+
+			<!-- Download Button -->
+			<div style="text-align: center; margin-top: 15px;">
+			<a href="saurabhjha.pdf" download class="btn btn-primary">Download PDF</a>
+			</div>
+		</div>
+			</div>
+		</div>
+	</section>
+   
 
    
 
