--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -555,7 +555,7 @@
       </div>
     </section>
 
-<section id="exclusive-section" style="display:none;">
+<section id="exclusive-section12" style="display:none;">
   <!-- Exclusive content here -->
    <p>Hi My Name is Saurabh jha</p>
 </section>
@@ -631,5 +631,6 @@
   <script src=" js/main.js"></script>
     </body>
 </head>
+
 
 
