--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Infosys Specialist Programmer Interview Experience" />
   <meta property="og:description" content="My Infosys SP interview journey, covering all rounds and tips." />
   <meta property="og:type" content="article" />
-  <meta property="og:url" content="https://saurabhjha.site/sp_interview_exp" />
+  <meta property="og:url" content="https://saurabhjha.live/sp_interview_exp" />
     <link rel="icon" type="image/png" href=" images/logo.png" />
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -555,7 +555,7 @@
       </div>
     </section>
 
-<section id="exclusive-section12" style="display:none;">
+<section id="exclusive-section2" style="display:none;">
   <!-- Exclusive content here -->
    <p>Hi My Name is Saurabh jha</p>
 </section>
@@ -631,6 +631,7 @@
   <script src=" js/main.js"></script>
     </body>
 </head>
+
 
 
 
