--- a/Linkedinpost/index.html
+++ b/Linkedinpost/index.html
@@ -184,6 +184,34 @@
     <div class="row">
 
       <!-- First Post 758 -->
+
+
+		<div class="col-md-6 mb-5">
+        <div class="resume-wrap ftco-animate">
+          <span class="date">24th May 2025</span>
+          <h2>LinkedIn Post 1</h2>
+          <span class="position">Shared on LinkedIn</span>
+          <p class="mt-4">
+            I recently shared my thoughts and achievements through a LinkedIn post. You can view the embedded post below:
+          </p>
+          <div style="text-align: center; margin-top: 20px; ">
+            <iframe 
+              src="https://www.linkedin.com/embed/feed/update/urn:li:share:7375622774121205760" 
+			  height="400"
+              width="100%" 
+              frameborder="0" 
+              allowfullscreen 
+              title="Embedded LinkedIn Post 1"
+              style="max-width: 504px;">
+            </iframe>
+          </div>
+        </div>
+      </div>
+
+
+
+
+		
       <div class="col-md-6 mb-5">
         <div class="resume-wrap ftco-animate">
           <span class="date">24th May 2025</span>
@@ -488,3 +516,4 @@
 		
 	</body>
 	</html>
+
