--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-   
+
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3572576129639558"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <title>Infosys Specialist Programmer Interview Experience 2025| Saurabh Jha</title>
@@ -631,6 +633,7 @@
   <script src=" js/main.js"></script>
     </body>
 </head>
+
 
 
 
