--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Detailed Infosys SP interview experience by Saurabh Jha. Includes online test, technical rounds, and HR discussion." />
   <meta name="author" content="Saurabh Jha" />
   <meta name="robots" content="index, follow" />
+	  <meta name="google-adsense-account" content="ca-pub-3572576129639558">
 
   <!-- Open Graph for social previews (optional) -->
   <meta property="og:title" content="Infosys Specialist Programmer Interview Experience" />
@@ -633,6 +634,7 @@
   <script src=" js/main.js"></script>
     </body>
 </head>
+
 
 
 
