--- a/study_material/index.html
+++ b/study_material/index.html
@@ -194,7 +194,7 @@
             MY  latest study Material for Data Structures and Algorithms is now available!
           </p>
           <div style="text-align: center; margin-top: 20px; ">
-			<button onclick="window.location.href='saurabhjha.pdf'" class="btn btn-primary py-3 px-5">Download PDF</button>
+			<button onclick="window.location.href='studymaterial/infosys_prepration_questions.pdf'" class="btn btn-primary py-3 px-5">Download PDF</button>
             
           </div>
         </div>
