--- a/study_material/index.html
+++ b/study_material/index.html
@@ -183,6 +183,23 @@
 
     <div class="row">
 
+		<div class="col-md-6 mb-5">
+        <div class="resume-wrap ftco-animate">
+          <span class="date">Infosys Practice Question 2</span>
+		  <h4>03-01-2025</h4>
+          <h2>Practice Material</h2>
+          <span class="position">PDF Download</span>
+          <p class="mt-4">
+            MY  latest study Material of New Video for Data Structures and Algorithms is now available!
+          </p>
+          <div style="text-align: center; margin-top: 20px; ">
+			<button onclick="window.location.href='studymaterial/infosys_practice_question2.pdf'" class="btn btn-primary py-3 px-5">Download PDF</button>
+            
+          </div>
+        </div>
+      </div>
+
+
       <!-- First Post 758 -->
       <div class="col-md-6 mb-5">
         <div class="resume-wrap ftco-animate">
