--- a/study_material/index.html
+++ b/study_material/index.html
@@ -4,7 +4,10 @@
 		<title>Saurabh Kumar Jha Portfolio</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="google-adsense-account" content="ca-pub-3572576129639558">
 		<link rel="icon" type="image/png" href="/images/logo.png" />
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3572576129639558"
+     crossorigin="anonymous"></script>
 		
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
