--- a/study_material/index.html
+++ b/study_material/index.html
@@ -1,9 +1,62 @@
 	<!DOCTYPE html>
 	<html lang="en">
 	<head>
-		<title>Saurabh Kumar Jha Portfolio</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+				<title>Infosys Specialist Programmer & DSE Preparation 2025 | Coding Questions & Exam Pattern</title>
+				<meta charset="utf-8">
+				<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+			
+			<meta name="description" content="Complete preparation guide for Infosys Specialist Programmer (SP) and Digital Specialist Engineer (DSE) 2025. Get latest exam pattern, coding questions, interview experience, assessment test details, off campus drive pattern, and preparation strategy." />
+			
+			<meta name="keywords" content="
+			infosys specialist programmer coding questions,
+			infosys specialist programmer preparation,
+			infosys specialist programmer,
+			infosys exam pattern 2025,
+			infosys digital specialist engineer coding questions,
+			specialist programmer infosys,
+			infosys coding questions for specialist programmer,
+			infosys specialist programmer exam pattern,
+			infosys sp role preparation,
+			infosys sp and dse preparation,
+			infosys coding questions,
+			infosys preparation 2025,
+			infosys dse and sp role preparation,
+			infosys sp dse coding questions,
+			infosys sp and dse exam questions,
+			infosys specialist programmer coding questions 2025,
+			infosys assessment test 2025,
+			infosys exam preparation,
+			infosys sp and dse exam pattern 2025,
+			infosys specialist programmer test,
+			specialist programmer infosys interview questions,
+			infosys specialist programmer interview experience,
+			infosys specialist programmer interview,
+			infosys interview experience,
+			how to prepare for infosys specialist programmer,
+			how to crack infosys specialist programmer,
+			specialist programmer infosys preparation,
+			infosys sp dse preparation,
+			infosys off campus drive exam pattern,
+			infosys off campus exam pattern,
+			infosys off campus drive for 2025 batch exam pattern,
+			infosys sp and dse interview experience,
+			infosys sp dse,
+			infosys sp,
+			infosys 21 lpa coding questions,
+			infosys power programmer coding questions,
+			infosys l1 l2 l3 coding questions,
+			infosys test pattern 2025,
+			infosys test process for specialist programmer and digital specialist engineer,
+			infosys upgradation test
+			" />
+			
+			<!-- SEO & Indexing -->
+			<meta name="robots" content="index, follow" />
+			<meta name="googlebot" content="index, follow" />
+			<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+			<meta charset="UTF-8" />
+
 		<meta name="google-adsense-account" content="ca-pub-3572576129639558">
 		<link rel="icon" type="image/png" href="/images/logo.png" />
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3572576129639558"
