--- a/study_material/index.html
+++ b/study_material/index.html
@@ -213,13 +213,13 @@
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav nav ml-auto">
-          <li class="nav-item"><a href="/home-section" class="nav-link"><span>Home</span></a></li>
-          <li class="nav-item"><a href="/about-section" class="nav-link"><span>About</span></a></li>
-          <li class="nav-item"><a href="/resume-section" class="nav-link"><span>Resume</span></a></li>
-          <li class="nav-item"><a href="/project-section" class="nav-link"><span>Projects</span></a></li>
-          <li class="nav-item"><a href="/blogs-section" class="nav-link"><span>Blogs</span></a></li>
-          <li class="nav-item"><a href="/contact-section" class="nav-link"><span>Contact</span></a></li>
-          <li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
+          <li class="nav-item"><a href="home-section" class="nav-link"><span>Home</span></a></li>
+          <li class="nav-item"><a href="about-section" class="nav-link"><span>About</span></a></li>
+          <li class="nav-item"><a href="resume-section" class="nav-link"><span>Resume</span></a></li>
+          <li class="nav-item"><a href="project-section" class="nav-link"><span>Projects</span></a></li>
+          <li class="nav-item"><a href="blogs-section" class="nav-link"><span>Blogs</span></a></li>
+          <li class="nav-item"><a href="contact-section" class="nav-link"><span>Contact</span></a></li>
+          <li class="nav-item"><a href="Games" class="nav-link"><span>Games</span></a></li>
         </ul>
       </div>
     </div>
