--- a/study_material/index.html
+++ b/study_material/index.html
@@ -343,6 +343,7 @@
 	<script src="js/jquery.animateNumber.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
 	<script src="js/coments.js"></script>
+	<script src="js/studymaterial.js"></script>
 	
 	<script src="js/main.js"></script>
 		
