Fix HTML structure and update stylesheet link

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body>
 
@@ -38,6 +38,7 @@
 
 </div>
 
-<script src="js/dashboard.js"></script>
+<script src="dashboard.js"></script>
 </body>
 </html>
+
