--- a/admin/login.html
+++ b/admin/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Admin Login</title>
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="admin.css">
 </head>
 <body class="center">
 
@@ -14,6 +14,7 @@
   <p id="error"></p>
 </div>
 
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
+
