--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -59,7 +59,7 @@
   </main>
 </div>
 
-<script src="admin.js"></script>
+<script src="dashboard.js"></script>
 
 <script>
   // Auto-fill today's date
@@ -79,3 +79,4 @@
 
 </body>
 </html>
+
