--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -8,12 +8,16 @@
 <body>
 
 <!-- Topbar -->
+<!-- Topbar / Navbar -->
 <div class="topbar">
-  <h2>Admin Dashboard</h2>
-  <button onclick="logout()">Logout</button>
-</div>
+  <div class="topbar-left">
+    <h2>Admin Dashboard</h2>
+  </div>
 
-<div class="dashboard">
+  <div class="topbar-right">
+    <button class="logout-btn" onclick="logout()">Logout</button>
+  </div>
+</div>
 
   <!-- Sidebar -->
   <aside class="sidebar">
@@ -79,4 +83,5 @@
 
 </body>
 </html>
+
 
