--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy | SaurabhJha.live</title>
+    <title>Privacy Policy | SaurabhJha.live | SaurabhJha.co.in</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Privacy Policy for SaurabhJha.live. Learn how we collect, use, and protect your personal information.">
@@ -79,7 +79,7 @@
     <p class="updated">Last Updated: January 06, 2026</p>
 
     <p>
-        Welcome to <strong>SaurabhJha.live</strong> ("we", "our", "us"). Your privacy is very important to us.
+        Welcome to <strong>SaurabhJha.live</strong>. Your privacy is very important to us.
         This Privacy Policy document explains how we collect, use, protect, and disclose information when you
         visit and interact with our website <strong>https://saurabhjha.live</strong>.
         By using this website, you agree to the collection and use of information in accordance with this policy.
@@ -198,7 +198,7 @@
         If you have any questions or concerns regarding this Privacy Policy, you may contact us at:
     </p>
     <p>
-        <strong>Email:</strong> bt21ee036@nituk.ac.in<br>
+        <strong>Email:</strong> saurabh.kumar.jha@zohomail.in<br>
         <strong>Website:</strong> https://saurabhjha.live<br>
         <strong>Location:</strong> Uttarakhand, India
     </p>
