--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
 		  <div class="row">
 			<div class="col-md-12 text-center">
   
-			  <p><a href="/privacy-policy.html">Privacy Policy</a>
+			  <p><a href="/privacy-policy">Privacy Policy</a>
 </p> 
 			</div>
 		  </div>
