--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,10 @@
 		  <div class="row">
 			<div class="col-md-12 text-center">
   
-			  <p><a href="/privacy-policy">Privacy Policy</a>
+			  <p><a href="/privacy-policy">Privacy Policy</a> |
+<a href="/disclaimer">Disclaimer</a> |
+<a href="/terms-and-conditions">Terms & Conditions</a>
+
 </p> 
 			</div>
 		  </div>
