--- a/Infosys_joining_onboarding_exp/index.html
+++ b/Infosys_joining_onboarding_exp/index.html
@@ -472,6 +472,21 @@
     </section>
 
 
+		<footer class="ftco-footer ftco-section">
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-12 text-center">
+  
+			  <p><a href="/privacy-policy">Privacy Policy</a> |
+<a href="/disclaimer">Disclaimer</a> |
+<a href="/terms-and-conditions">Terms & Conditions</a>
+
+</p> 
+			</div>
+		  </div>
+		</div>
+	  </footer>
+
 
 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
