--- a/Linkedinpost/index.html
+++ b/Linkedinpost/index.html
@@ -478,7 +478,21 @@
 	</section>
 
 
-	
+
+		<footer class="ftco-footer ftco-section">
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-12 text-center">
+  
+			  <p><a href="/privacy-policy">Privacy Policy</a> |
+<a href="/disclaimer">Disclaimer</a> |
+<a href="/terms-and-conditions">Terms & Conditions</a>
+
+</p> 
+			</div>
+		  </div>
+		</div>
+	  </footer>
 		
 		<footer class="ftco-footer ftco-section">
 			<div class="container">
@@ -516,4 +530,5 @@
 		
 	</body>
 	</html>
+
 
