--- a/Linkedinpost/index.html
+++ b/Linkedinpost/index.html
@@ -480,30 +480,27 @@
 
 
 		<footer class="ftco-footer ftco-section">
-		<div class="container">
-		  <div class="row">
-			<div class="col-md-12 text-center">
-  
-			  <p><a href="/privacy-policy">Privacy Policy</a> |
-<a href="/disclaimer">Disclaimer</a> |
-<a href="/terms-and-conditions">Terms & Conditions</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
 
-</p> 
-			</div>
-		  </div>
-		</div>
-	  </footer>
-		
-		<footer class="ftco-footer ftco-section">
-			<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center">
-	
-				<p>All Rights Reserved by Saurabh_Jha.site</p> 
-				</div>
-			</div>
-			</div>
-		</footer>
+        <!-- Policy Links -->
+        <p>
+          <a href="/privacy-policy">Privacy Policy</a> |
+          <a href="/disclaimer">Disclaimer</a> |
+          <a href="/terms-and-conditions">Terms & Conditions</a>
+        </p>
+
+        <!-- Copyright -->
+        <p class="mt-2">
+          © 2026 <strong>SaurabhJha.live</strong> | All Rights Reserved
+        </p>
+
+      </div>
+    </div>
+  </div>
+</footer>
+
 
 
 	<!-- loader -->
@@ -530,5 +527,6 @@
 		
 	</body>
 	</html>
+
 
 
