--- a/Three_phase_inverter/index.html
+++ b/Three_phase_inverter/index.html
@@ -396,6 +396,29 @@ void loop() {
     </section>
 
 
+		<footer class="ftco-footer ftco-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+
+        <!-- Policy Links -->
+        <p>
+          <a href="/privacy-policy">Privacy Policy</a> |
+          <a href="/disclaimer">Disclaimer</a> |
+          <a href="/terms-and-conditions">Terms & Conditions</a>
+        </p>
+
+        <!-- Copyright -->
+        <p class="mt-2">
+          © 2026 <strong>SaurabhJha.live</strong> | All Rights Reserved
+        </p>
+
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 
 
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
@@ -420,3 +443,4 @@ void loop() {
   <script src="js/main.js"></script>
     </body>
 </head>
+
