--- a/sp_interview_exp/index.html
+++ b/sp_interview_exp/index.html
@@ -604,6 +604,30 @@
     </form>
   </div>
 </div>
+
+
+		<footer class="ftco-footer ftco-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+
+        <!-- Policy Links -->
+        <p>
+          <a href="/privacy-policy">Privacy Policy</a> |
+          <a href="/disclaimer">Disclaimer</a> |
+          <a href="/terms-and-conditions">Terms & Conditions</a>
+        </p>
+
+        <!-- Copyright -->
+        <p class="mt-2">
+          © 2026 <strong>SaurabhJha.live</strong> | All Rights Reserved
+        </p>
+
+      </div>
+    </div>
+  </div>
+</footer>
+
  
 
 
@@ -634,6 +658,7 @@
   <script src=" js/main.js"></script>
     </body>
 </head>
+
 
 
 
