--- a/study_material/index.html
+++ b/study_material/index.html
@@ -310,18 +310,72 @@
 	</section>
 
 
+
+			<!-- Login/Register Popup -->
+<div id="authPopup" class="popup">
+  <div class="popup-content">
+    <span class="close" id="closePopup">&times;</span>
+
+    <!-- Tabs -->
+    <div class="tabs">
+      <button id="loginTab" class="tab active">Login</button>
+      <button id="registerTab" class="tab">Register</button>
+    </div>
+
+    <!-- Login Form -->
+    <form id="loginForm" class="form active">
+      <h2 class="mb-4">Login</h2>
+      <div class="form-group">
+        <input type="email" id="loginEmail" placeholder="Email Address" required>
+      </div>
+      <div class="form-group">
+        <input type="password" id="loginPassword" placeholder="Password" required>
+      </div>
+      <button type="submit" class="btn btn-primary py-2 px-4">Login</button>
+    </form>
+
+    <!-- Register Form -->
+    <form id="registerForm" class="form">
+	  <h3>Register</h3>
+      <div class="form-group">
+        <input type="text" id="registerName" placeholder="Full Name" required>
+      </div>
+      <div class="form-group">
+        <input type="email" id="registerEmail" placeholder="Email Address" required>
+      </div>
+      <div class="form-group">
+        <input type="password" id="registerPassword" placeholder="Password" required>
+      </div>
+      <button type="submit" class="btn btn-success py-2 px-4">Sign Up</button>
+    </form>
+  </div>
+</div>
+
+
+
 	
-		
 		<footer class="ftco-footer ftco-section">
-			<div class="container">
-			<div class="row">
-				<div class="col-md-12 text-center">
-	
-				<p>All Rights Reserved by Saurabh_Jha.site</p> 
-				</div>
-			</div>
-			</div>
-		</footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+
+        <!-- Policy Links -->
+        <p>
+          <a href="/privacy-policy">Privacy Policy</a> |
+          <a href="/disclaimer">Disclaimer</a> |
+          <a href="/terms-and-conditions">Terms & Conditions</a>
+        </p>
+
+        <!-- Copyright -->
+        <p class="mt-2">
+          © 2026 <strong>SaurabhJha.live</strong> | All Rights Reserved
+        </p>
+
+      </div>
+    </div>
+  </div>
+</footer>
+
 
 
 	<!-- loader -->
