--- a/study_material/index.html
+++ b/study_material/index.html
@@ -398,6 +398,7 @@
 	<script src="js/scrollax.min.js"></script>
 	<script src="js/coments.js"></script>
 	<script src="js/studymaterial.js"></script>
+    <script src="js/loginscripts.js"></script>
 	
 	<script src="js/main.js"></script>
 		
