--- a/study_material/index.html
+++ b/study_material/index.html
@@ -185,6 +185,61 @@
 	}
 
 
+
+		
+
+/* Popup Overlay */
+.popup {
+  display: none; 
+  position: fixed; 
+  top: 0; left: 0; 
+  width: 100%; height: 100%; 
+  background: rgba(0,0,0,0.6); 
+  justify-content: center; align-items: center;
+}
+.popup-content {
+  background: #545454; 
+  padding: 20px; 
+  border-radius: 8px; 
+  width: 350px;
+  text-align: center;
+  position: relative;
+}
+.close {
+  position: absolute; 
+  top: 10px; right: 15px; 
+  font-size: 20px; 
+  cursor: pointer;
+}
+.tabs {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.tab {
+  flex: 1;
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  background: #f1f1f1;
+}
+.tab.active {
+  background: #ffbd39;
+  color: #fff;
+}
+.btn-success {
+    color: #fff;
+    background-color: #ffbd39;
+    border-color: #545454;
+}
+.form {
+  display: none;
+}
+.form.active {
+  display: block;
+}
+
+
 	</style>
 		<script>
 	window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
