--- a/study_material/index.html
+++ b/study_material/index.html
@@ -275,6 +275,7 @@
           <li class="nav-item"><a href="index.html#blogs-section" class="nav-link"><span>Blogs</span></a></li>
           <li class="nav-item"><a href="index.html#contact-section" class="nav-link"><span>Contact</span></a></li>
           <li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
+			<li class="nav-item"><a href="#" class="nav-link" id="loginBtn">Login</a></li>
         </ul>
       </div>
     </div>
