--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
           <a href="/study_material" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/study_material_img.png');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="/sp_interview_exp" target="_blank">My Study Materials For Interview Prepration</a></h3>
+            <h3 class="heading"><a href="/Infosys_Specialist_Programmer_Interview_Experience" target="_blank">My Study Materials For Interview Prepration</a></h3>
             <p>Check the best Software Devloper Engineer Interview Resource on My website</p>
           </div>
         </div>
@@ -658,10 +658,10 @@
       <!-- Blog Card 3 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="/sp_interview_exp" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/Infosys-AI-and-analytics-play.png');">
+          <a href="/Infosys_Specialist_Programmer_Interview_Experience" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/Infosys-AI-and-analytics-play.png');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="/sp_interview_exp" target="_blank">Infosys Interview Experience</a></h3>
+            <h3 class="heading"><a href="/Infosys_Specialist_Programmer_Interview_Experience" target="_blank">Infosys Interview Experience</a></h3>
             <p>Detailed walk-through of my Specialist Programmer interview journey at Infosys.</p>
           </div>
         </div>
