--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="/study_material" class="nav-link"><span>Store</span></a></li>
+	          <li class="nav-item"><a href="/Infosys_Specialist_Programmer_Interview_study_material" class="nav-link"><span>Store</span></a></li>
 		  <li class="nav-item"><a href="#blogs-section" class="nav-link"><span>Blogs</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 			<li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
@@ -646,10 +646,10 @@
       <!-- Blog Card 2 -->
       <div class="col-md-4 justify-content-center">
         <div class="blog-entry justify-content-end">
-          <a href="/study_material" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/study_material_img.png');">
+          <a href="/Infosys_Specialist_Programmer_Interview_study_material" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/study_material_img.png');">
           </a>
           <div class="text mt-3 float-right d-block">
-            <h3 class="heading"><a href="/Infosys_Specialist_Programmer_Interview_Experience" target="_blank">My Study Materials For Interview Prepration</a></h3>
+            <h3 class="heading"><a href="/Infosys_Specialist_Programmer_Interview_study_material" target="_blank">My Study Materials For Interview Prepration</a></h3>
             <p>Check the best Software Devloper Engineer Interview Resource on My website</p>
           </div>
         </div>
