--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -23,8 +23,14 @@
   <aside class="sidebar">
     <h2>Admin Panel</h2>
     <ul>
-      <li class="active">Practice Materials</li>
-    </ul>
+  <li class="active" onclick="location.href='dashboard.html'">
+    Practice Materials
+  </li>
+  <li onclick="location.href='posts.html'">
+    Posts
+  </li>
+</ul>
+
   </aside>
 
   <!-- Main Content -->
@@ -83,5 +89,6 @@
 
 </body>
 </html>
+
 
 
