--- a/index.html
+++ b/index.html
@@ -680,6 +680,19 @@
         </div>
       </div>
 
+	  <div class="col-md-4 justify-content-center">
+        <div class="blog-entry justify-content-end">
+          <a href="/Linkedinpost" target="_blank" class="block-20 zoom-effect" style="background-image: url('images/Infosys-AI-and-analytics-play.png');">
+          </a>
+          <div class="text mt-3 float-right d-block">
+            <h3 class="heading"><a href="/Linkedinpost" target="_blank">My LinkedIn Posts</a></h3>
+            <p>
+			Explore all my latest LinkedIn posts and articles on various topics in technology, programming, and career development.
+			</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
