--- a/Infosys_joining_onboarding_exp/index.html
+++ b/Infosys_joining_onboarding_exp/index.html
@@ -511,5 +511,6 @@
      crossorigin="anonymous"></script>
   
   <script src=" js/main.js"></script>
+  <script src=" js/chatbot.js"></script>
     </body>
 </head>
