--- a/Three_phase_inverter/index.html
+++ b/Three_phase_inverter/index.html
@@ -441,6 +441,7 @@ void loop() {
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3572576129639558"
      crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
+  <script src="js/chatbot.js"></script>
     </body>
 </head>
 
