--- a/Infosys_Specialist_Programmer_Interview_study_material/index.html
+++ b/Infosys_Specialist_Programmer_Interview_study_material/index.html
@@ -455,6 +455,7 @@
 	<script src="js/coments.js"></script>
 	<script src="js/studymaterial.js"></script>
     <script src="js/loginscripts.js"></script>
+	<script src="js/chatbot.js"></script>
 	
 	<script src="js/main.js"></script>
 		
