--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,7 @@
   <script src="js/scrollax.min.js"></script>
   <script src="js/coments.js"></script>
   <script src="js/loginscripts.js"></script>
+  <script src=" js/chatbot.js"></script>
   
   <script src="js/main.js"></script>
     
