Adding chabot in all pages and updating chatbot appearence

--- a/Games/index.html
+++ b/Games/index.html
@@ -276,6 +276,7 @@
      crossorigin="anonymous"></script>
   
   <script src="js/main.js"></script>
+  <script src="js/chatbot.js"></script>
     </body>
 </head>
 
