--- a/index.html
+++ b/index.html
@@ -199,10 +199,11 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="/Infosys_Specialist_Programmer_Interview_study_material" class="nav-link"><span>Store</span></a></li>
-		  <li class="nav-item"><a href="#blogs-section" class="nav-link"><span>Blogs</span></a></li>
+		      <li class="nav-item"><a href="#blogs-section" class="nav-link"><span>Blogs</span></a></li>
+			  <li class="nav-item"><a href="https://chat.saurabhjha.live" class="nav-link"><span>Chat</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-			<li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
-			<li class="nav-item"><a href="#" class="nav-link" id="loginBtn">Login</a></li>
+			  <li class="nav-item"><a href="/Games" class="nav-link"><span>Games</span></a></li>
+			  <li class="nav-item"><a href="#" class="nav-link" id="loginBtn">Login</a></li>
 	        </ul>
 	      </div>
 	    </div>
