--- a/index.html
+++ b/index.html
@@ -1242,10 +1242,11 @@
 			<div class="col-md-12 text-center">
   
 			  <p><a href="/privacy-policy">Privacy Policy</a> |
-<a href="/disclaimer">Disclaimer</a> |
-<a href="/terms-and-conditions">Terms & Conditions</a>
+					<a href="/disclaimer">Disclaimer</a> |
+					<a href="/terms-and-conditions">Terms & Conditions</a> |
+					<a href="/admin/dashboard.html">Admin Panel</a>
 
-</p> 
+					</p> 
 			</div>
 		  </div>
 		</div>
