--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/png" href="/images/logo.png" />
   <link rel="stylesheet" href="admin.css">
 </head>
 <body>
