--- a/admin/posts.html
+++ b/admin/posts.html
@@ -22,7 +22,7 @@
     <!-- =============================================
          SIDEBAR
     ============================================= -->
-    <aside class="sidebar">
+    <!-- <aside class="sidebar">
       <h2>Admin Panel</h2>
       <ul>
         <li>
@@ -32,7 +32,20 @@
           <a href="posts.html">Posts</a>
         </li>
       </ul>
-    </aside>
+    </aside> -->
+
+    <aside class="sidebar">
+    <h2>Admin Panel</h2>
+      <ul>
+        <li class="active" onclick="location.href='dashboard.html'">
+          Practice Materials
+        </li>
+        <li onclick="location.href='posts.html'">
+          Posts
+        </li>
+      </ul>
+
+  </aside>
 
     <!-- =============================================
          MAIN CONTENT
