updating amdin profile

--- a/admin/posts.html
+++ b/admin/posts.html
@@ -37,7 +37,7 @@
     <aside class="sidebar">
     <h2>Admin Panel</h2>
       <ul>
-        <li class="active" onclick="location.href='dashboard.html'">
+        <li  onclick="location.href='dashboard.html'">
           Practice Materials
         </li>
         <li onclick="location.href='posts.html'">
