--- a/admin/posts.html
+++ b/admin/posts.html
@@ -13,31 +13,20 @@
        TOPBAR
   ============================================= -->
   <div class="topbar">
-    <h2>Manage Posts</h2>
-    <button class="logout-btn" onclick="logout()">Logout</button>
+  <div class="topbar-left">
+    <h2>Admin Dashboard</h2>
   </div>
 
-  <div class="dashboard">
+  <div class="topbar-right">
+    <button class="logout-btn" onclick="logout()">Logout</button>
+  </div>
+</div>
 
-    <!-- =============================================
-         SIDEBAR
-    ============================================= -->
-    <!-- <aside class="sidebar">
-      <h2>Admin Panel</h2>
-      <ul>
-        <li>
-          <a href="dashboard.html">Practice Materials</a>
-        </li>
-        <li class="active">
-          <a href="posts.html">Posts</a>
-        </li>
-      </ul>
-    </aside> -->
-
-    <aside class="sidebar">
+  <!-- Sidebar -->
+  <aside class="sidebar">
     <h2>Admin Panel</h2>
       <ul>
-        <li  onclick="location.href='dashboard.html'">
+        <li class="active" onclick="location.href='dashboard.html'">
           Practice Materials
         </li>
         <li onclick="location.href='posts.html'">
@@ -46,7 +35,6 @@
       </ul>
 
   </aside>
-
     <!-- =============================================
          MAIN CONTENT
     ============================================= -->
