--- a/admin/posts.html
+++ b/admin/posts.html
@@ -26,10 +26,10 @@
   <aside class="sidebar">
     <h2>Admin Panel</h2>
       <ul>
-        <li class="active" onclick="location.href='dashboard.html'">
+        <li onclick="location.href='dashboard.html'">
           Practice Materials
         </li>
-        <li onclick="location.href='posts.html'">
+        <li class="active" onclick="location.href='posts.html'">
           Posts
         </li>
       </ul>
