updating amdin profile

--- a/admin/posts.html
+++ b/admin/posts.html
@@ -86,6 +86,7 @@
 
           <div class="form-actions">
             <!-- ✅ Fixed: added id="addPostBtn" so JS can disable it during fetch -->
+             <line-break>
             <button id="addPostBtn" onclick="addPost()">Add Post</button>
             <button type="button" class="secondary-btn" onclick="clearPostForm()">Clear</button>
           </div>
